unreleased

* Enhancements

  * pass :eager_nullify => false as the third argument to Upsert#row to disable clearing of null HStore keys

2.0.2 / 2013-11-06

* Bug fixes

  * Properly check for NULL equality when creating the UPSERT functions - thanks @pnomolos - https://github.com/seamusabshere/upsert/issues/25
  * When using Mysql2 client (MRI), don't pass timezone to DateTime columns - thanks @kjeremy! - https://github.com/seamusabshere/upsert/issues/24

2.0.1 / 2013-07-24

* Bug fixes

  * Rookie mistake - gsub!'ed an input arg, sorry. Blew up on a frozen string, thank goodness.

2.0.0 / 2013-07-24

* Breaking changes

  * For Postgres Hstore, null keys are deliberately deleted - so there's no way to set "foo" => NULL - "foo" will just get deleted as a key
  * Name merge functions "upsert1_2_0" instead of "upsert_"

1.2.0 / 2013-04-04

* Breaking changes

  * columns named "created_at" and "created_on" will only be set if it's a new row - thanks @derekharmel! https://github.com/seamusabshere/upsert/pull/15

* Enhancements

  * Detect invalid columns passed in either selector or setter - inspired by @atandrau, thanks! https://github.com/seamusabshere/upsert/issues/18

* Bug fixes

  * Always convert symbols to strings when used as bind vars - thanks @towerhe! - https://github.com/seamusabshere/upsert/pull/16

1.1.7 / 2013-01-15

* Enhancements

  * :assume_function_exists option to avoid creating same merge function over and over
  * Don't die on first occurrence of "tuple concurrently updated"

1.1.6 / 2012-12-20

* Bug fixes

  * Require pg-hstore >=1.1.1 which doesn't escape single quotes and backslashes when output is going to be used in a bind variable (as it is here)

1.1.5 / 2012-12-10

* Bug fixes

  * Properly cast "timestamp without time zone" in postgres - thanks @markmarijnissen! https://github.com/seamusabshere/upsert/issues/11

1.1.4 / 2012-12-06

* Enhancements

  * Use latest pg-hstore gem with standardized namespace

1.1.3 / 2012-12-06
